"welcome" and "navbar" formatting and approximate centering

--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plants</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <header>
+            <div class="navbar">
+                <div class="logo">
+                    <img id="leaf" src="logo_vector.png" alt="leaf">
+                    <p class="plants">Plants</p>
+                </div>
+                <nav>
+                    <ul class="header-menu">
+                        <li><span>Home</span></li>
+                        <li>About us</li>
+                        <li>Service</li>
+                        <li>Price</li>
+                        <li>Contacts</li>
+                    </ul>
+                </nav>
+        </header>
+    </div>
+    <main>
+        <section class="welcome">
+            <div class="welcome-leafs">
+                <div class="Welcome-section">
+                    <div class="text1">
+                        <h1 class="pupu">We grow <span>plants</span> and give you oxygen</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s.</p>
+                        <button id="learn-more" type="learnmore">LEARN MORE</button>
+                    </div>
+                </div>
+                <div class="leafs">
+                    <img id="leafs" src="leafs.png" alt="leafs">
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div>
+                <img id="flowerpot" src="about.png" alt="flowerpot">
+                <div>
+                    <h1> <span class="pipi"> We are </span> <span class="pepe"> professional experienced </span> <span
+                            class="pipi2"> gardeners </span> </h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+                        but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    </div>
 </body>
+
 </html>
