formatting and approximate centering

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <div class="welcome-leafs">
                 <div class="Welcome-section">
                     <div class="text1">
-                        <h1 class="pupu">We grow <span>plants</span> and give you oxygen</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
+                        <h1 class="pupu">We grow <span>plants</span> and give <br> you oxygen</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and <br> typesetting industry. Lorem Ipsum has
+                            been the <br> industry's standard dummy text ever since the 1500s.</p>
                         <button id="learn-more" type="learnmore">LEARN MORE</button>
                     </div>
                 </div>
@@ -44,17 +44,27 @@
             </div>
         </section>
         <section class="about">
-            <div>
-                <img id="flowerpot" src="about.png" alt="flowerpot">
-                <div>
-                    <h1> <span class="pipi"> We are </span> <span class="pepe"> professional experienced </span> <span
+                <div class="about2">
+                    <img id="flowerpot" src="about.png" alt="flowerpot">
+                    <div class="text2">
+                    <h1> <span class="pipi"> We are </span> <span class="pepe"> professional <br> experienced </span> <span
                             class="pipi2"> gardeners </span> </h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    <p class="textp2">Lorem Ipsum is simply dummy text of the printing and <br> typesetting industry. Lorem Ipsum has been
+                        the industry's <br> standard dummy text ever since the 1500s, when an unknown <br> printer took a galley
+                        of type and scrambled it to make a type <br> specimen book. It has survived not only five centuries,
+                        but also <br> the leap into electronic typesetting, remaining essentially <br> unchanged.</p>
+                    </div>
+                    </div>
+        </section>
+        <section class="service">
+                <div class="service-content">
+                    <p>Service and our <br> projects</p>
+                    <div class="service-btns">
+                        <p>Gardens</p>
+                        <p>Lawn</p>
+                        <p>Planting</p>
+                    </div>
                 </div>
-            </div>
         </section>
     </main>
     </div>
