fix: adjust buttons,replace fonts

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                 <p> <strong> Prices </strong> </p>
                 <div class="prices-item">
                     <div class="price-item">
-                        <div class="price-btn">Basics</div>
-                        <div class="price-btn">Standard</div>
-                        <div class="price-btn">Pro care</div>
+                        <div class="price-btn">Pro care <div class="img-arrow"><img id="circles" src="assets/images/arrow.png" alt="circle"></div></div>
+                        <div class="price-btn">Standard <div class="img-arrow"><img id="circles" src="assets/images/arrow.png" alt="circle"></div></div>
+                        <div class="price-btn">Basics <div class="img-arrow"><img id="circles" src="assets/images/arrow.png" alt="circle"></div></div>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
         <section class="contacts">
             <div class="contactp"><p>Contact us</p></div>
             <div class="contacts-container">
-                <button>City</button>
+                <button>City <div class="img-arrow"><img id="circle" src="assets/images/arrow.png" alt="circle"></div></button>
             </div>
             <div>
                 <img id="contact-woman" src="assets/images/contact-woman.png" alt="contact-woman">
